favicon, better dark/light, icons example

--- a/src/alt-ux/index.html
+++ b/src/alt-ux/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Stable Diffusion</title>
+		<title>diffusion-uix</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="https://user-images.githubusercontent.com/1816471/217665057-02d36117-160c-4856-a104-c90f0e5fe771.png" sizes="32x32">
 
 		<script
 			src="https://unpkg.com/react@latest/umd/react.production.min.js"
