--- a/src/alt-ux/index.html
+++ b/src/alt-ux/index.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="https://user-images.githubusercontent.com/1816471/217665057-02d36117-160c-4856-a104-c90f0e5fe771.png" sizes="32x32">
 
 		<script
-			src="https://unpkg.com/react@latest/umd/react.production.min.js"
+			src="https://unpkg.com/react@latest/umd/react.development.js"
 			crossorigin="anonymous"
 		></script>
 		<script
-			src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"
+			src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js"
 		></script>
 		<script
 			src="https://unpkg.com/@mui/material@5.11.8/umd/material-ui.development.js"
